refactor(ci/cd): fix path action and pass to yarn Dockerfiles

--- a/portfolio/backend/Dockerfile
+++ b/portfolio/backend/Dockerfile
@@ -36,10 +36,10 @@ COPY --chown=node:node package*.json ./
 COPY --chown=node:node . .
 
 # Running `npm ci` removes the existing node_modules directory and passing in --only=production ensures that only the production dependencies are installed. This ensures that the node_modules directory is as optimized as possible
-RUN npm i
+RUN yarn install --only=production
 
 # Run the build command which creates the production bundle
-RUN npm run build
+RUN yarn run build
 
 # Set NODE_ENV environment variable
 ENV NODE_ENV production
