--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,10 +28,10 @@ jobs:
           username: ${{ github.repository_owner }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Build and push providers image
+      - name: Build and push backend image
         uses: docker/build-push-action@v2
         with:
-          context: "./portfolio/backend/providers"
+          context: "./portfolio/backend/"
           push: true
           tags: |
             ghcr.io/alexandredfm/alexandredfm-api:latest
