--- a/portfolio/backend/Dockerfile
+++ b/portfolio/backend/Dockerfile
@@ -29,7 +29,7 @@
 
 FROM node:18-alpine as build
 
-WORKDIR /app
+WORKDIR /usr/src/app
 
 COPY --chown=node:node package*.json ./
 
@@ -53,8 +53,8 @@ USER node
 FROM node:18-alpine as production
 
 # Copy the bundled code from the build stage to the production image
-COPY --chown=node:node --from=build /app/node_modules ./node_modules
-COPY --chown=node:node --from=build /app/dist ./dist
+COPY --chown=node:node --from=build /usr/src/app/node_modules ./node_modules
+COPY --chown=node:node --from=build /usr/src/app/dist ./dist
 
 # Start the server using the production build
 CMD [ "node", "dist/main.js" ]
