--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -75,9 +75,9 @@ jobs:
           echo "${{ secrets.SSH_PRIV_KEY }}" > ~/.ssh/id_rsa
           chmod 600 ~/.ssh/id_rsa
           ssh-keyscan -H ${{ secrets.IP }} >> ~/.ssh/known_hosts
-      - name: Copy Docker Compose
-        run: |
-          rsync -avz -e "ssh -o StrictHostKeyChecking=no" --progress ./docker-compose-production.yml ${{ secrets.USER_IP }}:${{ secrets.WORK_DIR }}
+      # - name: Copy Docker Compose
+      #   run: |
+      #     rsync -avz -e "ssh -o StrictHostKeyChecking=no" --progress ./docker-compose-production.yml ${{ secrets.USER_IP }}:${{ secrets.WORK_DIR }}
       - name: Connect and Pull Docker
         run: |
           ssh ${{ secrets.USER_IP }} "cd ${{ secrets.WORK_DIR }} && cp ./docker-compose-production.yml ${{ secrets.WORK_DIR }}/docker-compose.yml && docker-compose -f docker-compose-production.yml pull && docker-compose -f docker-compose-production.yml up -d && exit"
