--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -77,8 +77,7 @@ jobs:
           ssh-keyscan -H ${{ secrets.IP }} >> ~/.ssh/known_hosts
       - name: Copy Docker Compose
         run: |
-          sudo apt install rsync -y
-          rsync -avz -e "ssh -o StrictHostKeyChecking=no" --progress ./docker-compose-production.yml ${{ secrets.USER_IP }}:${{ secrets.WORK_DIR }}
+          rsync -v -v -e 'ssh -p 22' --progress ./docker-compose-production.yml ${{ secrets.USER_IP }}:${{ secrets.WORK_DIR }}
       - name: Connect and Pull Docker
         run: |
           ssh ${{ secrets.USER_IP }} "cd ${{ secrets.WORK_DIR }} && cp ./docker-compose-production.yml ${{ secrets.WORK_DIR }}/docker-compose.yml && docker-compose -f docker-compose-production.yml pull && docker-compose -f docker-compose-production.yml up -d && exit"
