--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -74,9 +74,16 @@ jobs:
           mkdir -p ~/.ssh/
           echo "${{ secrets.SSH_PRIV_KEY }}" > ~/.ssh/id_rsa
           chmod 600 ~/.ssh/id_rsa
-          ssh-keyscan -H ${{ secrets.IP }} >> ~/.ssh/known_hosts
-      - name: Install Packages for includes errors
-        run: sudo apt update && sudo apt install scp
+          ssh-keyscan -H ${{ secrets.HOST }} >> ~/.ssh/known_hosts
+      - name: Copy Docker Compose via SCP
+        uses: appleboy/scp-action@v0.1.7
+        with:
+          host: ${{ secrets.HOST }}
+          username: ${{ secrets.USERNAME }}
+          port: ${{ secrets.PORT }}
+          key: ${{ secrets.SSH_PRIV_KEY }}
+          source: "docker-compose-production.yml"
+          target: ${{ secrets.WORK_DIR }}/docker-compose.yml
       - name: Copy Docker Compose
         run: scp docker-compose-production.yml ${{ secrets.USER_IP }}:${{ secrets.WORK_DIR }}/docker-compose.yml
       - name: Connect and Pull Docker
