--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -84,10 +84,10 @@ jobs:
           username: ${{ secrets.USERNAME }}
           port: ${{ secrets.PORT }}
           key: ${{ secrets.SSH_PRIV_KEY }}
-          source: "./portfolio/docker-compose-production.yml"
-          target: ${{ secrets.WORK_DIR }}/docker-compose.yml
+          source: "/home/alexandredfm"
+          target: ${{ secrets.WORK_DIR }}
       - name: Connect and Pull Docker
         run: |
-          ssh ${{ secrets.USER_IP }} "cd ${{ secrets.WORK_DIR }} && docker-compose pull && docker-compose up -d && exit"
+          ssh ${{ secrets.USER_IP }} "cd ${{ secrets.WORK_DIR }} && docker-compose -f docker-compose-production.yml pull && docker-compose -f docker-compose-production.yml up -d && exit"
       - name: cleanup
         run: rm -rf ~/.ssh
