--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -84,7 +84,7 @@ jobs:
           username: ${{ secrets.USERNAME }}
           port: ${{ secrets.PORT }}
           key: ${{ secrets.SSH_PRIV_KEY }}
-          source: "/home/alexandredfm"
+          source: "./portfolio/docker-compose-production.yml"
           target: ${{ secrets.WORK_DIR }}
       - name: Connect and Pull Docker
         run: |
