--- a/portfolio/docker-compose-production.yml
+++ b/portfolio/docker-compose-production.yml
@@ -27,15 +27,15 @@ version: "3"
 services:
   # Nginx Proxy Manager
   nginx-proxy-manager:
-  image: "jc21/nginx-proxy-manager:latest"
-  restart: always
-  ports:
-    - "80:80"
-    - "81:81"
-    - "443:443"
-  volumes:
-    - ./data:/data
-    - ./letsencrypt:/etc/letsencrypt
+    image: jc21/nginx-proxy-manager:latest
+    restart: always
+    ports:
+      - "80:80"
+      - "81:81"
+      - "443:443"
+    volumes:
+      - ./data:/data
+      - ./letsencrypt:/etc/letsencrypt
 
   # MariaDB
   db:
