--- a/portfolio/frontend/package.json
+++ b/portfolio/frontend/package.json
@@ -15,6 +15,7 @@
     "framer-motion": "^10.16.16",
     "lucide-react": "^0.309.0",
     "next": "14.0.4",
+    "next-contentlayer": "^0.3.4",
     "react": "^18",
     "react-dom": "^18",
     "tailwindcss-debug-screens": "^2.2.1"
