--- a/portfolio/frontend/tsconfig.json
+++ b/portfolio/frontend/tsconfig.json
@@ -22,11 +22,7 @@
         "name": "next"
       }
     ],
-    "paths": {
-      "@/*": [
-        "./src/*"
-      ]
-    }
+    "baseUrl": ".",
   },
   "include": [
     "next-env.d.ts",
