feat(chore): add simple admin panel

--- a/portfolio/frontend/env/.env.template
+++ b/portfolio/frontend/env/.env.template
@@ -23,3 +23,18 @@
 # THE SOFTWARE.
 #
 
+API_BASE_URL="http://localhost:3000"
+FRONT_BASE_URL="http://localhost:8080"
+
+# ============= Auth ==============
+
+# MariaDB
+MARIADB_TYPE="mariadb"
+MARIADB_HOST="db"
+MARIADB_PORT=3306
+MARIADB_DB="alexandredfm_db"
+MARIADB_USERNAME="alexandredfm"
+MARIADB_PASSWORD="password"
+JWT_SECRET="secret"
+
+# =================================
