--- a/portfolio/frontend/package.json
+++ b/portfolio/frontend/package.json
@@ -9,9 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@boiseitguru/cookie-cutter": "^0.2.3",
     "@next/mdx": "^14.0.4",
     "@nextui-org/react": "^2.2.9",
     "@tailwindcss/typography": "^0.5.10",
+    "cookie-cutter": "^0.2.0",
     "framer-motion": "^10.16.16",
     "lucide-react": "^0.309.0",
     "next": "14.0.4",
