--- a/portfolio/env/.env.template
+++ b/portfolio/env/.env.template
@@ -25,6 +25,7 @@
 
 API_BASE_URL="http://localhost:3000"
 FRONT_BASE_URL="http://localhost:8080"
+JWT_SECRET="secret"
 
 # ============= Auth ==============
 
