--- a/portfolio/frontend/package.json
+++ b/portfolio/frontend/package.json
@@ -16,7 +16,7 @@
     "cookie-cutter": "^0.2.0",
     "framer-motion": "^10.16.16",
     "lucide-react": "^0.309.0",
-    "next": "14.0.4",
+    "next": "^14.0.4",
     "next-contentlayer": "^0.3.4",
     "react": "^18",
     "react-dom": "^18",
