--- a/portfolio/env-templates/.env.database
+++ b/portfolio/env-templates/.env.database
@@ -1,8 +1,9 @@
-# File Name: .env.template
-# Author: Alexandre Kévin DE FREITAS MARTINS
-# Creation Date: 2024
-# Description: .env.template
-# Company: Tux Inc.
+# File Name: .env.database
+# Author : Alexandre Kévin DE FREITAS MARTINS
+# Creation Date: 15/7/2024
+# Description: This is the .env.database
+# Copyright (c) 2024 Alexandre Kévin DE FREITAS MARTINS
+# Version: 1.0.0
 #
 # Permission is hereby granted, free of charge, to any person obtaining a copy
 # of this software and associated documentation files (the 'Software'), to deal
@@ -23,18 +24,7 @@
 # THE SOFTWARE.
 #
 
-API_BASE_URL="http://localhost:3000"
-FRONT_BASE_URL="http://localhost:8080"
-JWT_SECRET="secret"
-
-# ============= Auth ==============
-
-# MariaDB
-MARIADB_TYPE="mariadb"
-MARIADB_HOST="db"
-MARIADB_PORT=3306
-MARIADB_DB="alexandredfm_db"
-MARIADB_USERNAME="alexandredfm"
-MARIADB_PASSWORD="password"
-
-# =================================
+MYSQL_DATABASE=alexandredfm_db
+MYSQL_USER=alexandredfm
+MYSQL_PASSWORD=password
+MYSQL_ROOT_PASSWORD=root_password
