--- a/portfolio/frontend/Dockerfile
+++ b/portfolio/frontend/Dockerfile
@@ -35,7 +35,8 @@ RUN mkdir /app
 WORKDIR /app
 
 # Install app dependencies
-COPY ./package.json /package.json
+# COPY ./package.json /package.json
+COPY package.json ./
 RUN yarn install
 
 # Bundle app source
