--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -54,7 +54,7 @@ jobs:
               id: docker_build
               uses: docker/build-push-action@v2
               with:
-                  context: "./portfolio/frontend"
+                  context: "./portfolio/frontend/"
                   push: true
                   tags: |
                       ghcr.io/alexandredfm/alexandredfm:latest
