--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -62,32 +62,32 @@ jobs:
                   cache-from: type=gha
                   cache-to: type=gha,mode=max
 
-    deploy-server:
-        name: Deploy Docker Compose to server & restart
-        needs: [build_frontend] #, build_api]
-        runs-on: ubuntu-latest
-        steps:
-            - name: Checkout
-              uses: actions/checkout@v4
-              with:
-                  fetch-depth: 0
-            - name: Create SSH Keys
-              run: |
-                  mkdir -p ~/.ssh/
-                  echo "${{ secrets.SSH_PRIV_KEY }}" > ~/.ssh/id_rsa
-                  chmod 600 ~/.ssh/id_rsa
-                  ssh-keyscan -H ${{ secrets.HOST }} >> ~/.ssh/known_hosts
-            - name: Copy Docker Compose via SCP
-              uses: appleboy/scp-action@v0.1.7
-              with:
-                  host: ${{ secrets.HOST }}
-                  username: ${{ secrets.USERNAME }}
-                  port: ${{ secrets.PORT }}
-                  key: ${{ secrets.SSH_PRIV_KEY }}
-                  source: "./portfolio/docker-compose-production.yml"
-                  target: ${{ secrets.WORK_DIR }}
-            - name: Connect and Pull Docker
-              run: |
-                  ssh ${{ secrets.USER_IP }} "cd ${{ secrets.WORK_DIR }}/portfolio && docker compose -f docker-compose-production.yml pull && docker compose -f docker-compose-production.yml up -d && exit"
-            - name: Clean up SSH Keys
-              run: rm -rf ~/.ssh
+    # deploy-server:
+    #     name: Deploy Docker Compose to server & restart
+    #     needs: [build_frontend] #, build_api]
+    #     runs-on: ubuntu-latest
+    #     steps:
+    #         - name: Checkout
+    #           uses: actions/checkout@v4
+    #           with:
+    #               fetch-depth: 0
+    #         - name: Create SSH Keys
+    #           run: |
+    #               mkdir -p ~/.ssh/
+    #               echo "${{ secrets.SSH_PRIV_KEY }}" > ~/.ssh/id_rsa
+    #               chmod 600 ~/.ssh/id_rsa
+    #               ssh-keyscan -H ${{ secrets.HOST }} >> ~/.ssh/known_hosts
+    #         - name: Copy Docker Compose via SCP
+    #           uses: appleboy/scp-action@v0.1.7
+    #           with:
+    #               host: ${{ secrets.HOST }}
+    #               username: ${{ secrets.USERNAME }}
+    #               port: ${{ secrets.PORT }}
+    #               key: ${{ secrets.SSH_PRIV_KEY }}
+    #               source: "./portfolio/docker-compose-production.yml"
+    #               target: ${{ secrets.WORK_DIR }}
+    #         - name: Connect and Pull Docker
+    #           run: |
+    #               ssh ${{ secrets.USER_IP }} "cd ${{ secrets.WORK_DIR }}/portfolio && docker compose -f docker-compose-production.yml pull && docker compose -f docker-compose-production.yml up -d && exit"
+    #         - name: Clean up SSH Keys
+    #           run: rm -rf ~/.ssh
