refactor(design): change to blue ambiance & fix nav/lang

--- a/portfolio/frontend/package.json
+++ b/portfolio/frontend/package.json
@@ -13,8 +13,10 @@
     "@next/mdx": "^14.0.4",
     "@nextui-org/react": "^2.2.9",
     "@tailwindcss/typography": "^0.5.10",
+    "@types/js-cookie": "^3.0.6",
     "cookie-cutter": "^0.2.0",
     "framer-motion": "^10.16.16",
+    "js-cookie": "^3.0.5",
     "lucide-react": "^0.309.0",
     "next": "^14.0.4",
     "next-contentlayer": "^0.3.4",
