--- a/portfolio/frontend/package.json
+++ b/portfolio/frontend/package.json
@@ -10,16 +10,17 @@
   },
   "dependencies": {
     "@boiseitguru/cookie-cutter": "^0.2.3",
-    "@next/mdx": "^14.0.4",
     "@heroui/react": "2.8.2",
+    "@next/mdx": "^14.0.4",
     "@tailwindcss/typography": "^0.5.10",
     "@types/js-cookie": "^3.0.6",
     "cookie-cutter": "^0.2.0",
-    "framer-motion": "^10.16.16",
+    "framer-motion": "^12.23.12",
     "js-cookie": "^3.0.5",
     "lucide-react": "^0.309.0",
     "next": "^14.0.4",
     "next-contentlayer": "^0.3.4",
+    "next-themes": "^0.4.6",
     "react": "^18",
     "react-dom": "^18",
     "tailwindcss-debug-screens": "^2.2.1"
