--- a/portfolio/frontend/.prettierrc
+++ b/portfolio/frontend/.prettierrc
@@ -2,5 +2,6 @@
     "singleQuote": false,
     "trailingComma": "all",
     "useTabs": false,
-    "tabWidth": 4
+    "tabWidth": 4,
+    "plugins": ["prettier-plugin-tailwindcss"]
 }
