--- a/portfolio/frontend/package.json
+++ b/portfolio/frontend/package.json
@@ -34,6 +34,7 @@
     "eslint-config-next": "14.0.4",
     "postcss": "^8",
     "prettier": "3.1.1",
+    "prettier-plugin-tailwindcss": "^0.6.14",
     "tailwindcss": "^3.4.0",
     "typescript": "^5"
   },
