--- a/portfolio/env/.env.directus.template
+++ b/portfolio/env/.env.directus.template
@@ -27,47 +27,100 @@
 #
 
 ###############################################################################
-## Directus
-###############################################################################
+### General
 
-KEY="DIRECTUS_KEY"
-SECRET="DIRECTUS_SECRET"
+HOST="0.0.0.0"
+PORT=8055
 
-###############################################################################
-## Database
-###############################################################################
+PUBLIC_URL="/"
 
-DB_CLIENT="mysql"
-DB_HOST="database"
-DB_PORT="3306"
-DB_DATABASE=alexandredfm_db
-DB_USER=alexandredfm
-DB_PASSWORD=password
-
-CACHE_ENABLED="true"
-CACHE_STORE="redis"
-REDIS="redis://cache:6379"
+REDIS="redis://DB_REDIS_HOST:6379"
 
 ###############################################################################
-# Base Access Control
-###############################################################################
+### Database
 
-ADMIN_EMAIL="admin@example.com"
-ADMIN_PASSWORD="d1r3ctu5"
+DB_CLIENT="pg"
+DB_HOST="DB_HOST_NAME"
+DB_PORT="5432"
+DB_DATABASE="DB_NAME"
+DB_USER="DB_USER"
+DB_PASSWORD="DB_PASSWORD"
+DB_SSL="false"
 
 ###############################################################################
-## CORS
+### Rate Limiting
+
+RATE_LIMITER_ENABLED=false
+
+RATE_LIMITER_STORE=memory
+
+RATE_LIMITER_POINTS=25
+
+RATE_LIMITER_DURATION=1
+
 ###############################################################################
+### Caching
+
+CACHE_ENABLED=false
+
+CACHE_STORE=redis
+
+ASSETS_CACHE_TTL="30d"
+
+###############################################################################
+### File Storage
+
+STORAGE_LOCATIONS="local"
+STORAGE_LOCAL_DRIVER="local"
+STORAGE_LOCAL_ROOT="./uploads"
+
+###############################################################################
+### Security
+
+SECRET="SECRET_KEY"
+
+ACCESS_TOKEN_TTL="15m"
+
+REFRESH_TOKEN_TTL="7d"
+
+REFRESH_TOKEN_COOKIE_SECURE=false
+
+REFRESH_TOKEN_COOKIE_SAME_SITE="lax"
+
+REFRESH_TOKEN_COOKIE_NAME="directus_refresh_token"
 
 CORS_ENABLED=true
 
-###############################################################################
-## Security
-###############################################################################
+CORS_ORIGIN=true
 
-CONTENT_SECURITY_POLICY_DIRECTIVES__FRAME_ANCESTORS=array:http://localhost:*,self
+CORS_METHODS=GET,POST,PATCH,DELETE
 
-###############################################################################
-## Miscellaneous
-###############################################################################
+CORS_ALLOWED_HEADERS=Content-Type,Authorization
 
+CORS_EXPOSED_HEADERS=Content-Range
+
+CORS_CREDENTIALS=true
+
+CORS_MAX_AGE=18000
+
+####################################################################################################
+### Extensions
+
+EXTENSIONS_PATH="./extensions"
+
+EXTENSIONS_AUTO_RELOAD=true
+
+####################################################################################################
+### Email
+
+EMAIL_FROM="no-reply@example.com"
+
+EMAIL_TRANSPORT="sendmail"
+EMAIL_SENDMAIL_NEW_LINE="unix"
+EMAIL_SENDMAIL_PATH="/usr/sbin/sendmail"
+
+####################################################################################################
+### Startup
+
+ADMIN_EMAIL=user@domain.com
+ADMIN_PASSWORD=password
