--- a/.github/workflows/build-docker-dev.yml
+++ b/.github/workflows/build-docker-dev.yml
@@ -67,7 +67,7 @@ jobs:
               id: docker_build
               uses: docker/build-push-action@v6
               with:
-                  context: ./portfolio
+                  context: "./portfolio"
                   file: Dockerfile.dev
                   push: true
                   tags: |
