--- a/portfolio/package.json
+++ b/portfolio/package.json
@@ -11,14 +11,14 @@
   "dependencies": {
     "@boiseitguru/cookie-cutter": "^0.2.3",
     "@heroui/react": "2.8.2",
-    "@next/mdx": "^14.0.4",
+    "@next/mdx": "^15.4.6",
     "@tailwindcss/typography": "^0.5.10",
     "@types/js-cookie": "^3.0.6",
     "cookie-cutter": "^0.2.0",
     "framer-motion": "^12.23.12",
     "js-cookie": "^3.0.5",
     "lucide-react": "^0.309.0",
-    "next": "^14.0.4",
+    "next": "^15.4.6",
     "next-contentlayer": "^0.3.4",
     "next-themes": "^0.4.6",
     "react": "^18",
@@ -31,7 +31,7 @@
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
-    "eslint-config-next": "14.0.4",
+    "eslint-config-next": "^15.4.6",
     "postcss": "^8",
     "prettier": "3.1.1",
     "prettier-plugin-tailwindcss": "^0.6.14",
