--- a/.github/workflows/build-docker-dev.yml
+++ b/.github/workflows/build-docker-dev.yml
@@ -67,6 +67,7 @@ jobs:
               id: docker_build
               uses: docker/build-push-action@v6
               with:
+                  context: "./portfolio"
                   file: "./portfolio/Dockerfile.dev"
                   push: true
                   tags: |
