--- a/portfolio/Dockerfile.dev
+++ b/portfolio/Dockerfile.dev
@@ -28,7 +28,7 @@
 ###############################################################################
 ### Build For Development
 
-FROM node:18-alpine as build-stage
+FROM node:22-alpine AS build-stage
 
 # Create app directory
 RUN mkdir /app
@@ -48,7 +48,7 @@ RUN yarn run build
 ###############################################################################
 ### Development Stage
 
-FROM node:18-alpine as development-stage
+FROM node:22-alpine AS development-stage
 
 WORKDIR /app
 
