chore: update packages, fix postcss/tailwind config & change pkg manager

--- a/portfolio/tsconfig.json
+++ b/portfolio/tsconfig.json
@@ -22,7 +22,9 @@
         "name": "next"
       }
     ],
-    "baseUrl": ".",
+    "paths": {
+      "@/*": ["./*"]
+    },
   },
   "include": [
     "next-env.d.ts",
