feat: add Heroui components & enhance Tailwind configuration with custom animations

--- a/portfolio/env/.env.frontend.template
+++ b/portfolio/env/.env.frontend.template
@@ -30,7 +30,12 @@
 FRONT_BASE_URL="FRONTEND_URL"
 
 ###############################################################################
-### API Configuration
+### API Configuration (Runtime - accessible on client side with NEXT_PUBLIC_ prefix)
 
-API_BASE_URL="API_URL"
-API_BEARER_TOKEN="BEARER_TOKEN"
+NEXT_PUBLIC_API_BASE_URL="http://backend:8055"
+
+###############################################################################
+### Directus Configuration
+
+NEXT_PUBLIC_DIRECTUS_URL="http://localhost:8055"
+DIRECTUS_WEBSITE_TOKEN="YOUR_DIRECTUS_STATIC_TOKEN"
