--- a/portfolio/Dockerfile.dev
+++ b/portfolio/Dockerfile.dev
@@ -28,27 +28,34 @@
 ###############################################################################
 ### Build For Development
 
+
 FROM node:22-alpine AS build-stage
+
+# Install pnpm
+RUN corepack enable && corepack prepare pnpm@latest --activate
 
 # Create app directory
 RUN mkdir /app
 WORKDIR /app
 
 # Install app dependencies
-# COPY ./package.json /package.json
 COPY package.json ./
-RUN yarn install
+COPY pnpm-lock.yaml ./
+RUN pnpm install --frozen-lockfile
 
 # Bundle app source
 COPY . .
 
 # Build app
-RUN yarn run build
+RUN pnpm run build
 
 ###############################################################################
 ### Development Stage
 
 FROM node:22-alpine AS development-stage
+
+# Install pnpm
+RUN corepack enable && corepack prepare pnpm@latest --activate
 
 WORKDIR /app
 
