feat: update Dockerfile & docker-compose for an improved dev setup

--- a/portfolio/Dockerfile.dev
+++ b/portfolio/Dockerfile.dev
@@ -25,46 +25,21 @@
 # THE SOFTWARE.
 #
 
-###############################################################################
-### Build For Development
+FROM node:22-alpine
 
-
-FROM node:22-alpine AS build-stage
-
-# Install pnpm
-RUN corepack enable && corepack prepare pnpm@latest --activate
-
-# Create app directory
-RUN mkdir /app
-WORKDIR /app
-
-# Install app dependencies
-COPY package.json ./
-COPY pnpm-lock.yaml ./
-RUN pnpm install --frozen-lockfile
-
-# Bundle app source
-COPY . .
-
-# Build app
-RUN pnpm run build
-
-###############################################################################
-### Development Stage
-
-FROM node:22-alpine AS development-stage
-
-# Install pnpm
-RUN corepack enable && corepack prepare pnpm@latest --activate
+RUN corepack enable
 
 WORKDIR /app
 
-# Copy build from build-stage
-COPY --from=build-stage /app/public ./public
-# Automatically leverage output traces to reduce image size
-# https://nextjs.org/docs/advanced-features/output-file-tracing
-COPY --from=build-stage --chown=nextjs:nodejs /app/.next/standalone ./
-COPY --from=build-stage --chown=nextjs:nodejs /app/.next/static ./.next/static
+COPY --chown=node:node package*.json /app/
+COPY --chown=node:node pnpm-lock.yaml /app/
 
-# Run server
-CMD ["node", "/app/server.js"]
+RUN corepack prepare pnpm@latest --activate && pnpm install
+
+COPY --chown=node:node . /app/
+
+ENV NODE_ENV=development
+
+EXPOSE 3000
+
+CMD ["pnpm", "dev"]
