--- a/portfolio/Dockerfile
+++ b/portfolio/Dockerfile
@@ -29,7 +29,10 @@
 ### Build For Production
 
 
-FROM node:22-alpine AS build-stage
+FROM node:22-slim AS build-stage
+
+# Install dependencies for native modules
+RUN apt-get update && apt-get install -y python3 make g++ && rm -rf /var/lib/apt/lists/*
 
 # Install pnpm
 RUN corepack enable && corepack prepare pnpm@latest --activate
@@ -41,7 +44,7 @@ WORKDIR /app
 # Install app dependencies
 COPY package.json ./
 COPY pnpm-lock.yaml ./
-RUN pnpm install --frozen-lockfile
+RUN pnpm install --no-frozen-lockfile
 
 # Bundle app source
 COPY . .
