--- a/portfolio/package.json
+++ b/portfolio/package.json
@@ -45,5 +45,8 @@
         "prettier": "3.1.1",
         "prettier-plugin-tailwindcss": "^0.6.14",
         "typescript": "^5.9.3"
+    },
+    "optionalDependencies": {
+        "lightningcss-linux-arm64-musl": "^1.30.2"
     }
 }
