fix: update frontend volume paths in docker-compose
Correct node_modules & .next directories

--- a/portfolio/docker-compose.yml
+++ b/portfolio/docker-compose.yml
@@ -95,7 +95,8 @@ services:
       - "3000:3000"
     volumes:
       - ./:/usr/src/app
-      - /app/node_modules
+      - /usr/src/app/node_modules
+      - /usr/src/app/.next
     env_file:
       - ./.env/.env.frontend.template
     networks:
