feat(kube): update deployment & secrets management for dev & prod envs
Adopts full YAML secrets files for managing sensitive Kubernetes environment variables in both development and production deployments.
Replaces single-value secret creation with applying entire secrets files, allowing for more scalable and flexible secrets management.
Adds .gitignore rules and example secrets files to guide secure usage and prevent accidental commits of sensitive data.
Supports a wider range of environment variables in deployments, improving configuration consistency and maintainability.

--- a/.github/workflows/deploy-dev.yml
+++ b/.github/workflows/deploy-dev.yml
@@ -38,8 +38,8 @@ env:
     KUBERNETES_URL: ${{ secrets.KUBERNETES_URL }}
     KUBERNETES_SECRET: ${{ secrets.KUBERNETES_SECRET }}
 
-    # Next.js Configuration
-    API_BASE_URL: ${{ secrets.DEV_API_BASE_URL }}
+    # Kubernetes Secrets YAML (entire secrets.yaml file content for dev)
+    K8S_SECRETS_YAML_DEV: ${{ secrets.K8S_SECRETS_YAML_DEV }}
 
 # Trigger the workflow when the Build and Push Docker Development Image to GitHub Container Registry workflow completes successfully
 on:
@@ -73,11 +73,19 @@ jobs:
               run: |
                 kubectl get namespace alexandredfm-dev || kubectl create namespace alexandredfm-dev
 
-            - name: Create My API secrets
+            - name: Create My API secrets from YAML
               run: |
-                  kubectl delete secret alexandredfm-secret-env-dev -n alexandredfm-dev --ignore-not-found=true
-                  kubectl create secret generic alexandredfm-secret-env-dev -n alexandredfm-dev               \
-                    --from-literal=API_BASE_URL="${{ env.API_BASE_URL }}"                                     \
+                  # Write the secrets YAML to a temporary file
+                  echo "${{ env.K8S_SECRETS_YAML_DEV }}" > /tmp/secrets.yaml
+
+                  # Update the namespace in the YAML file to match development
+                  sed -i 's/namespace:.*/namespace: alexandredfm-dev/' /tmp/secrets.yaml || true
+
+                  # Apply the secrets to the cluster
+                  kubectl apply -f /tmp/secrets.yaml -n alexandredfm-dev
+
+                  # Clean up
+                  rm -f /tmp/secrets.yaml
 
             - name: Create GitHub Container Registry secret
               run: |
