feat: add path filters for portfolio & workflow files in build configs

--- a/.github/workflows/build-docker-dev.yml
+++ b/.github/workflows/build-docker-dev.yml
@@ -38,6 +38,9 @@ on:
     push:
         branches:
             - dev
+        paths:
+            - 'portfolio/**'
+            - '.github/workflows/build-docker-dev.yml'
 
 # Build and Push Docker Development Image to GitHub Container Registry
 jobs:
