--- a/.github/workflows/build-docker-prod.yml
+++ b/.github/workflows/build-docker-prod.yml
@@ -38,6 +38,9 @@ on:
     push:
         branches:
             - main
+        paths:
+            - 'portfolio/**'
+            - '.github/workflows/build-docker-prod.yml'
 
 # Build and Push Docker Development Image to GitHub Container Registry
 jobs:
